# KS_KB

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
docs/: 00_problem_brief.md  01_requirements.md  02_workflow.md  03_data_model.md  04_integrations.md  99_ai_instructions.md
scripts/: check.ps1  clean.ps1  format.ps1  help.ps1  install-dev.ps1  install.ps1  lint.ps1  run.ps1  run_dev.sh  test.ps1
src/ks_kb/: main.py
src/ks_kb/api/: routes_api.py  routes_health.py  routes_ui.py
src/ks_kb/models/: schemas.py
src/ks_kb/static/: app.css
src/ks_kb/templates/: base.html  index.html
src/ks_kb/utils/: errors.py  logging.py  settings.py
tests/: test_routes_health.py
