[project]
name = "ks-kb"
version = "0.1.0"
description = "Personal knowledge base (local-first) with strict citations and future multi-tenant capability."
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
  "fastapi>=0.104.0",
  "uvicorn[standard]>=0.24.0",
  "pydantic>=2.5.0",
  "pydantic-settings>=2.1.0",
  "python-multipart>=0.0.6",
  "jinja2>=3.1.0",
  "httpx>=0.27,<0.28"
]




[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.6",
    "httpx>=0.25.0",  # for testing FastAPI endpoints
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["ks_kb"]
addopts = "-v --strict-markers"

[tool.ruff]
line-length = 100
ks_kb = ["ks_kb"]
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["ks_kb"]
